--- a/test_index.html
+++ b/test_index.html
@@ -109,10 +109,10 @@
         <label for="hostSelect">Select Host/Group:</label>
         <select class="form-control" id="hostSelect">
             <option value="all">All Hosts</option>
-            <option value="group1">Group 1</option>
-            <option value="group2">Group 2</option>
-            <option value="host1">Host 1</option>
-            <option value="host2">Host 2</option>
+            <option value="HAM">HAM</option>
+            <option value="US">US</option>
+            <option value="LAB-SWT">LAB-SWT</option>
+            <option value="HOME-SWT">HOME-SWT</option>
         </select>
     </div>
     <div class="row">
