--- a/test_index.html
+++ b/test_index.html
@@ -209,4 +209,4 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popper
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs
