--- a/test_index.html
+++ b/test_index.html
@@ -119,7 +119,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Backup Configuration</h5>
+                    <h5 class="card-title"><i class="fas fa-save"></i> Backup Configuration</h5>
                     <p class="card-text">Backup the configuration of network devices.</p>
                     <button class="btn btn-primary" onclick="runPlaybook('backup_config.yml')">
                         <i class="fas fa-play"></i> Run
@@ -130,7 +130,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Device Info</h5>
+                    <h5 class="card-title"><i class="fas fa-info-circle"></i> Device Info</h5>
                     <p class="card-text">Get information about network devices.</p>
                     <button class="btn btn-primary" onclick="runPlaybook('device_info.yml')">
                         <i class="fas fa-play"></i> Run
@@ -141,7 +141,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Device Resources Uptime</h5>
+                    <h5 class="card-title"><i class="fas fa-clock"></i> Device Resources Uptime</h5>
                     <p class="card-text">Check the resources and uptime of network devices.</p>
                     <button class="btn btn-primary" onclick="runPlaybook('device_resources_uptime.yml')">
                         <i class="fas fa-play"></i> Run
@@ -152,7 +152,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Firmware Check/Upgrade</h5>
+                    <h5 class="card-title"><i class="fas fa-upload"></i> Firmware Check/Upgrade</h5>
                     <p class="card-text">Check and upgrade the firmware of network devices.</p>
                     <button class="btn btn-primary" onclick="runPlaybook('firmware_check_upgrade.yml')">
                         <i class="fas fa-play"></i> Run
@@ -163,7 +163,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Interface Status</h5>
+                    <h5 class="card-title"><i class="fas fa-network-wired"></i> Interface Status</h5>
                     <p class="card-text">Check the status of network interfaces.</p>
                     <button class="btn btn-primary" onclick="runPlaybook('interface_status.yml')">
                         <i class="fas fa-play"></i> Run
@@ -174,7 +174,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">VLAN Configuration</h5>
+                    <h5 class="card-title"><i class="fas fa-project-diagram"></i> VLAN Configuration</h5>
                     <p class="card-text">Configure VLANs on network devices.</p>
                     <button class="btn btn-primary" onclick="runPlaybook('vlan_config.yml')">
                         <i class="fas fa-play"></i> Run
@@ -209,7 +209,4 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.
