--- a/test_index.html
+++ b/test_index.html
@@ -208,5 +208,4 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.
+    <script src="https://code.jquery.com/jquery-3.5.1.slim
