--- a/test_index.html
+++ b/test_index.html
@@ -208,4 +208,4 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
