--- a/test_index.html
+++ b/test_index.html
@@ -88,6 +88,7 @@
             } finally {
                 document.getElementById('spinner').style.display = 'none';
                 document.getElementById('overlay').style.display = 'none';
+                console.log('Showing modal');
                 $('#outputModal').modal('show');
             }
         }
@@ -204,8 +205,3 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
