--- a/test_index.html
+++ b/test_index.html
@@ -121,9 +121,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Backup Configuration</h5>
                     <p class="card-text">Backup the configuration of network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('backup_config.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('backup_config.yml')">Run</button>
                 </div>
             </div>
         </div>
@@ -132,9 +130,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Device Info</h5>
                     <p class="card-text">Get information about network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('device_info.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('device_info.yml')">Run</button>
                 </div>
             </div>
         </div>
@@ -143,9 +139,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Device Resources Uptime</h5>
                     <p class="card-text">Check the resources and uptime of network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('device_resources_uptime.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('device_resources_uptime.yml')">Run</button>
                 </div>
             </div>
         </div>
@@ -154,9 +148,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Firmware Check/Upgrade</h5>
                     <p class="card-text">Check and upgrade the firmware of network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('firmware_check_upgrade.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('firmware_check_upgrade.yml')">Run</button>
                 </div>
             </div>
         </div>
@@ -165,9 +157,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Interface Status</h5>
                     <p class="card-text">Check the status of network interfaces.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('interface_status.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('interface_status.yml')">Run</button>
                 </div>
             </div>
         </div>
@@ -176,9 +166,7 @@
                 <div class="card-body">
                     <h5 class="card-title">VLAN Configuration</h5>
                     <p class="card-text">Configure VLANs on network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('vlan_config.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('vlan_config.yml')">Run</button>
                 </div>
             </div>
         </div>
