--- a/index.html
+++ b/index.html
@@ -6,14 +6,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f6f9;
         }
         .navbar {
             margin-bottom: 20px;
         }
         .card {
             margin-bottom: 20px;
+            border: none;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .card-title {
+            font-size: 1.25rem;
+            font-weight: bold;
+        }
+        .card-text {
+            font-size: 1rem;
+            color: #6c757d;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #004085;
         }
         .spinner-border {
             display: none;
@@ -33,10 +51,20 @@
             background: rgba(255, 255, 255, 0.8);
             z-index: 999;
         }
+        .modal-content {
+            border-radius: 0.5rem;
+        }
+        .modal-header {
+            border-bottom: none;
+        }
+        .modal-footer {
+            border-top: none;
+        }
     </style>
     <script>
         async function runPlaybook(playbook) {
-            console.log('Running playbook:', playbook);
+            const selectedHost = document.getElementById('hostSelect').value;
+            console.log('Running playbook:', playbook, 'on host:', selectedHost);
             document.getElementById('spinner').style.display = 'inline-block';
             document.getElementById('overlay').style.display = 'block';
             document.getElementById('output').innerText = '';
@@ -47,13 +75,13 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ playbook })
+                    body: JSON.stringify({ playbook, host: selectedHost })
                 });
                 const result = await response.json();
                 console.log('Playbook output:', result.output);
                 console.log('Playbook error:', result.error);
-                document.getElementById('output').innerText = result.output;
-                document.getElementById('error').innerText = result.error;
+                document.getElementById('output').innerText = result.output || 'No output';
+                document.getElementById('error').innerText = result.error || 'No error';
             } catch (error) {
                 console.error('Error running playbook:', error);
                 document.getElementById('error').innerText = 'An error occurred while running the playbook.';
@@ -76,104 +104,69 @@
             </ul>
         </div>
     </nav>
-    <h1 class="my-4">Run Ansible Playbooks</h1>
+    <h3 class="my-4">Run Ansible Playbooks</h3>
+    <div class="form-group">
+        <label for="hostSelect">Select Host/Group:</label>
+        <select class="form-control" id="hostSelect">
+            <option value="all">All Hosts</option>
+            <option value="HAM">HAM</option>
+            <option value="US">US</option>
+            <option value="LAB-SWT">LAB-SWT</option>
+            <option value="HOME-SWT">HOME-SWT</option>
+        </select>
+    </div>
     <div class="row">
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Backup Configuration</h5>
+                    <h5 class="card-title"><i class="fas fa-save"></i>Backup Configuration</h5>
                     <p class="card-text">Backup the configuration of network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('backup_config.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('backup_config.yml')"><i class="fas fa-play"></i>Run</button>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Device Info</h5>
+                    <h5 class="card-title"><i class="fas fa-info-circle"></i>Device Info</h5>
                     <p class="card-text">Get information about network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('device_info.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('device_info.yml')"><i class="fas fa-play"></i>Run</button>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Device Resources Uptime</h5>
+                    <h5 class="card-title"><i class="fas fa-clock"></i>Device Resources Uptime</h5>
                     <p class="card-text">Check the resources and uptime of network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('device_resources_uptime.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('device_resources_uptime.yml')"><i class="fas fa-play"></i>Run</button>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Error Detection and Correction</h5>
-                    <p class="card-text">Detect and correct errors in network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('error_detection_correction.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Firmware Check/Upgrade</h5>
+                    <h5 class="card-title"><i class="fas fa-upload"></i>Firmware Check/Upgrade</h5>
                     <p class="card-text">Check and upgrade the firmware of network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('firmware_check_upgrade.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('firmware_check_upgrade.yml')"><i class="fas fa-play"></i>Run</button>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Interface Status</h5>
+                    <h5 class="card-title"><i class="fas fa-network-wired"></i>Interface Status</h5>
                     <p class="card-text">Check the status of network interfaces.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('interface_status.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('interface_status.yml')"><i class="fas fa-play"></i>Run</button>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Restore Configuration</h5>
-                    <p class="card-text">Restore the configuration from a backup.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('restore_config.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Security Compliance</h5>
-                    <p class="card-text">Check the security compliance of network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('security_compliance.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">VLAN Configuration</h5>
+                    <h5 class="card-title"><i class="fas fa-project-diagram"></i>VLAN Configuration</h5>
                     <p class="card-text">Configure VLANs on network devices.</p>
-                    <button class="btn btn-primary" onclick="runPlaybook('vlan_config.yml')">
-                        <i class="fas fa-play"></i> Run
-                    </button>
+                    <button class="btn btn-primary" onclick="runPlaybook('vlan_config.yml')"><i class="fas fa-play"></i>Run</button>
                 </div>
             </div>
         </div>
